<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_edit_group"
        android:title="@string/menu_edit_group"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_manage_members"
        android:title="@string/menu_manage_members"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_invite_members"
        android:title="@string/menu_invite_members"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_regenerate_invite"
        android:title="@string/menu_regenerate_invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_progress"
        android:title="@string/menu_export_progress"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_leave_group"
        android:title="@string/menu_leave_group"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_delete_group"
        android:title="@string/menu_delete_group"
        app:showAsAction="never" />
    
</menu>
